tests/passing/hof_return.tails
func a() -> () -> int:
  || 123

func id<T>(x: T) -> unit:
  pass

func tests() -> unit:
  id::<() -> int>(a())
  id::<int>(a()())
