tests/failing/declare_generic_redefine.tails
func a<T, T>() -> unit:
  pass

func tests() -> unit:
  a::<int, int>()
